Fixed text cutoff issue due to less height

--- a/styles.css
+++ b/styles.css
@@ -69,12 +69,12 @@ body {
 @keyframes textJumble {
   0% {
     width: 0;
-    height: 109px;
+    height: 150px;
   }
 
   100% {
     width: 100%;
-    height: 109px;
+    height: 150px;
     white-space: normal;
   }
 }
